; ModuleID = '/home/carl/AnghaBench/lede/target/linux/ath79/files/drivers/net/ethernet/atheros/ag71xx/extr_ag71xx_main.c_ag71xx_hw_start.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/ath79/files/drivers/net/ethernet/atheros/ag71xx/extr_ag71xx_main.c_ag71xx_hw_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ag71xx = type { i32 }

@AG71XX_REG_RX_CTRL = common dso_local global i32 0, align 4
@RX_CTRL_RXE = common dso_local global i32 0, align 4
@AG71XX_REG_INT_ENABLE = common dso_local global i32 0, align 4
@AG71XX_INT_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ag71xx*)* @ag71xx_hw_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ag71xx_hw_start(%struct.ag71xx* %0) #0 {
  %2 = alloca %struct.ag71xx*, align 8
  store %struct.ag71xx* %0, %struct.ag71xx** %2, align 8
  %3 = load %struct.ag71xx*, %struct.ag71xx** %2, align 8
  %4 = load i32, i32* @AG71XX_REG_RX_CTRL, align 4
  %5 = load i32, i32* @RX_CTRL_RXE, align 4
  %6 = call i32 @ag71xx_wr(%struct.ag71xx* %3, i32 %4, i32 %5)
  %7 = load %struct.ag71xx*, %struct.ag71xx** %2, align 8
  %8 = load i32, i32* @AG71XX_REG_INT_ENABLE, align 4
  %9 = load i32, i32* @AG71XX_INT_INIT, align 4
  %10 = call i32 @ag71xx_wr(%struct.ag71xx* %7, i32 %8, i32 %9)
  %11 = load %struct.ag71xx*, %struct.ag71xx** %2, align 8
  %12 = getelementptr inbounds %struct.ag71xx, %struct.ag71xx* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @netif_wake_queue(i32 %13)
  ret void
}

declare dso_local i32 @ag71xx_wr(%struct.ag71xx*, i32, i32) #1

declare dso_local i32 @netif_wake_queue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
